# claude-setup

./: .gitignore  README.md
.claude/: settings.json
.claude-example/: .gitignore  README.md  pyproject.toml
.claude-example/.claude/agents/: code-architecture-reviewer.md
.claude-example/.claude/commands/: dev-docs-update.md  dev-docs.md
.claude-example/.claude/dev/active/project-setup/: project-setup-context.md  project-setup-plan.md
.claude-example/.claude/hooks/: post-tool-use-tracker.sh
.claude-example/.claude/skills/: skill-rules.json
.claude-example/.claude/skills/project-guidelines/: SKILL.md
.claude-example/notebooks/: 01_example_analysis.ipynb
.claude-example/src/analysis/: __init__.py  data.py  viz.py
.claude-example/tests/: test_data.py
.claude/agents/: documentation-architect.md  strategic-plan-architect.md
.claude/dev/active/project-setup/: project-setup-tasks.md
.claude/hooks/: post-tool-use-tracker.sh
.claude/skills/: skill-rules.json
.claude/skills/project-guidelines/: SKILL.md
.claude/skills/project-guidelines/resources/: docs.md  release.md  security.md  structure.md  testing.md  workflows.md
